# VulkanRendering

./: .editorconfig  .gitignore  CMakeLists.txt  FileHelper.h  QueueFamilyDevice.h  README.md  SwapChainSupportDetails.h  TriangleApp.cpp  TriangleApp.h  VulkanTest.sln  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  build.sh  main.cpp
include/: ExtensionValidation.h  FileHelper.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  TriangleApp.h  UniformBufferObject.h  Vertex.h
shaders/: compile.bat  compile.sh  shader_ubo.vert
src/: ExtensionValidation.cpp  TriangleApp.cpp  main.cpp
